--- a/rest/v1/.htaccess
+++ b/rest/v1/.htaccess
@@ -22,3 +22,12 @@ RewriteRule ^works/active/([0-9]+)$ controllers/works/active.php?worksid=$1 [L]
 RewriteRule ^works/search$ controllers/works/search.php [L]
 
 RewriteRule ^upload/photo$ core/upload-photo.php [L]
+
+RewriteRule ^user$ controllers/user/user.php [L]
+RewriteRule ^user/([0-9]+)$ controllers/user/user.php?userid=$1 [L]
+RewriteRule ^user/active/([0-9]+)$ controllers/user/active.php?userid=$1 [L]
+RewriteRule ^user/search$ controllers/user/search.php [L]
+RewriteRule ^user/password$ controllers/user/set-password.php [L]
+RewriteRule ^user/reset$ controllers/user/reset-password.php [L]
+RewriteRule ^user/login$ controllers/user/login.php [L]
+RewriteRule ^user/token$ controllers/user/token.php [L]
